bugs/tests/fuzz-05-18-13-21-59/r_616_r_175_issue3616_F10_P175_0_M1.stderr
likely_hits/r_616_r_175_issue3616_F10_P175_0_M1.p4(1): [--Werror=type-error] error: '(bit<4>)a'
enum int<4> e { a = 0, b = 0, c = ((bit<4>) (a)), d = a };
                                   ^^^^^^^^^^^^
  ---- Actual error:
  likely_hits/r_616_r_175_issue3616_F10_P175_0_M1.p4(1): Cannot unify type 'e' with type 'bit<4>'
  enum int<4> e { a = 0, b = 0, c = ((bit<4>) (a)), d = a };
              ^
  ---- Originating from:
  likely_hits/r_616_r_175_issue3616_F10_P175_0_M1.p4(1): Cannot cast from 'e' to 'bit<4>'
  enum int<4> e { a = 0, b = 0, c = ((bit<4>) (a)), d = a };
              ^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

